Week 9: Integrate visualization such as Radar chart. Added tabs to infowrapper so now there are event information, real-time tweets, and donation tabs. Updated data. Cleaned up infowrapper

--- a/client/component/App.css
+++ b/client/component/App.css
@@ -14,3 +14,35 @@
     overflow: auto;
     position: relative;
 }
+
+.initialTextDiv {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 30px;
+}
+
+.eventInfoContentWrapper {
+    font-size: 12px;
+    color: #08233B;
+    padding: 20px;
+}
+
+.center {
+    margin-top: 5vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.chartWrapper {
+    margin-top: 5vh;
+}
+
+.infoPairWrapper h6 {
+    margin-left: 2vh;
+}
